修改虚化背景后覆盖字体的问题

--- a/static/css/pageSetUp.css
+++ b/static/css/pageSetUp.css
@@ -9,13 +9,16 @@ body {
 }
 
 .container aside {
+    overflow: hidden;
+}
+
+.container aside .img {
     background: url(../images/city.jpg);
     filter: blur(10px) opacity(0.9);
-    margin: -15px;
-    flex-grow: 0;
     width: 420px;
-    overflow: hidden;
-    z-index: 1;
+    height: 110%;
+    float: left;
+    margin: -15px;
 }
 
 .container section {
