--- a/static/css/pageSetUp.css
+++ b/static/css/pageSetUp.css
@@ -19,7 +19,7 @@ body {
 
   background: url(../images/city.jpg);
   filter: blur(10px) opacity(0.9);
-  width: 420px;
+  width: 460px;
   height: 110%;
 }
 
@@ -30,12 +30,48 @@ body {
   background-color: #fff;
 }
 
+.user-profile{
+  position: absolute;
+  padding-top: 0;
+}
+
+.user-pic{
+  width: 420px;
+  height: 150px;
+  margin-top: 30px;
+}
+
+.center
+{
+    border-radius: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.user-name{
+  margin-top: 40px;
+  width: 420px;
+  height: 50px;
+  font-size: 24;
+  color: white;
+  text-align: center;
+}
+
+.user-desc{
+  width: 420px;
+  height: 100px;
+  font-size: 20;
+  color: whitesmoke;
+  text-align: center;
+}
+
 ul {
   position: absolute;
   list-style-type: none;
 
-  padding-top: 300px;
-  padding-left: 120px;
+  padding-top: 320px;
+  padding-left: 150px;
   font-size: 20;
 }
 
