--- a/static/css/pageSetUp.css
+++ b/static/css/pageSetUp.css
@@ -1,6 +1,6 @@
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -9,21 +9,23 @@ body {
   height: 100%;
 }
 
-.container aside {
+aside {
   overflow: hidden;
+
+  width: 30%;
 }
 
 .img {
   float: left;
-  margin: -15px; 
+
+  width: 100%;
+  height: 110%;
 
   background: url(../images/city.jpg);
   filter: blur(10px) opacity(0.9);
-  width: 460px;
-  height: 110%;
 }
 
-.container section {
+.block-show {
   flex-grow: 1;
   z-index: 2;
 
@@ -31,66 +33,80 @@ body {
 }
 
 .user-profile {
-  position: absolute;
+  position: fixed;
   padding-top: 0;
+
+  width: 30%;
+  height: 40%;
 }
 
 .user-pic {
-  width: 400px;
-  height: 150px;
-  margin-top: 30px;
+  display: flex;
+  margin-top: 10%;
+
+  width: 100%;
+  height: 45%;
 }
 
-.center {
-    border-radius: 100%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.user-pic img {
+  display: block;
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  width: 40%;
+  border-radius: 100%;
 }
 
 .user-name {
-  margin-top: 40px;
-  width: 420px;
-  height: 50px;
-  font-size: 22;
-  color: white;
   text-align: center;
+  margin-top: 10%;
+
+  font-size: 1.4em;
+
+  color: white;
 }
 
 .user-desc {
-  width: 420px;
-  height: 100px;
-  font-size: 20;
-  color: whitesmoke;
   text-align: center;
+  width: 100%;
+  margin-top: 5%;
+
+  font-size: 1.2em;
+
+  color: whitesmoke;
 }
 
 .sidebar-manu {
-  position: absolute;
-  list-style-type: none;
-  width: 20%;
+  position: fixed;
+  top: 40%;
 
-  padding-top: 320px;
-  padding-left: 50px;
-  font-size: 20;
+  width: 30%;
+  padding: 0;
+  margin-top: 3%;
+
+  font-size: 1.2em;
+  list-style-type: none;
 }
 
 .sidebar-manu li {
-  padding: 20px;
+  margin: 0 0 10% 25%;
 }
 
 .sidebar-manu li img {
   width: 10%;
-  margin-bottom: -3%
+  margin-bottom: -3%;
 }
 
 .sidebar-manu li a {
-  padding: 25px;
   text-align: left;
+
+  padding: 25px;
+
   letter-spacing: 0.1ch;
   text-decoration: none;
-
   font-family: "sans-serif";
   font-weight: normal;
+
   color: #F2F3F4;
 }
