[liaowenqiang]{fix}: fix blogs list part

--- a/static/css/pageSetUp.css
+++ b/static/css/pageSetUp.css
@@ -30,6 +30,7 @@ aside {
   z-index: 2;
 
   background-color: #fff;
+  overflow-y: scroll;
 }
 
 .user-profile {
@@ -169,17 +170,23 @@ aside {
   margin-top: 0;
   margin-left: 10%;
   margin-right: 6.6%;
+  width: 83.3%; 
+  height: 30%;
+  /* overflow: scroll; */
 }
 
-.blog-block-up {
+ /* .blog-block-up {
   margin: 0;
   display: inline;
-}
+
+} */
 
 .blog-block-down {
-  padding-left: 24.5%;
-  margin: 0;
-}
+  padding-left: 3.7%;
+  /* margin: 0; */
+  /* margin-top: 2.5%; */
+
+} 
 
 .blog-block-up-left {
   float: left;
@@ -188,8 +195,9 @@ aside {
   margin-right: 10px;
 }
 .blog-block-up-right {
-  float: right;
+  float: left;
   width: 78%;
+  height: 95%;
 }
 
 .blog-img {
@@ -202,21 +210,22 @@ aside {
 }
 .blog-title {
   width: 70%;
-  height: 5%;
+  height: 15%;
   margin-left: 20px;
+  margin-top: -1%;
 }
 .blog-date {
   width: 70%;
-  height: 5%;
+  height: 15%;
   margin-left: 20px;
   color: #9eabb3;
   font-size: 14px;
   font-weight: normal;
-  /* margin-top: -2.5%; */
+  margin-top: 1.5%;
 }
 .blog-para {
   width: 95%;
-  height: 12%;
+  height: 40%;
   margin-left: 20px;
   color: #5d686f;
   font-size: 18px;
