--- a/static/css/about-me.css
+++ b/static/css/about-me.css
@@ -9,7 +9,7 @@
   top: 0;
   overflow: hidden;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 
   width: 100%;
@@ -32,6 +32,7 @@
   text-align: center;
   position: absolute;
 
+  margin-top: 200px;
   width: 400px;
   height: 400px;
   border-radius: 5px;
@@ -53,7 +54,7 @@
     top: -100%;
   }
   to {
-    top: 25%;
+    top: 0%;
   }
 }
 
