--- a/static/css/about-me.css
+++ b/static/css/about-me.css
@@ -9,7 +9,6 @@
   top: 0;
   overflow: hidden;
   display: flex;
-  justify-content: center;
 
   width: 100%;
   height: 100%;
@@ -32,6 +31,8 @@
   position: absolute;
 
   margin-top: 200px;
+  left: 50%;
+  margin-left: -200px;
   width: 400px;
   height: 400px;
   border-radius: 5px;
