--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,7 +12,7 @@ aside {
   position: fixed;
   left: 0;
   top: 0;
-  width: 450px;
+  width: 400px;
   height: 100%;
   overflow: hidden;
 }
@@ -91,7 +91,7 @@ aside {
 }
 
 .blog-show {
-  margin-left: 520px;
+  margin-left: 460px;
   overflow: hidden;
 }
 
@@ -135,73 +135,47 @@ aside {
 }
 
 .list-article {
-  display: block;
-  font-family: sans-serif;
-  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+
+  margin: 30px 0 10px 0;
+}
+
+.list {
+  display: flex;
+
+  border-top: 1px solid #ccc;
+  padding: 15px 0;
+
+  width: 96%;
+}
+
+.list-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-right: 20px;
-  width: 100%;
+  width: 150px;
 }
 
-.list-article a {
-  display: block;
-  text-decoration: none;
-}
-
-.blog-block-down {
-  margin-left: 20px;
-}
-
-.blog-block-up-left {
-  float: left;
-  width: 20%;
-  margin-top: 15px;
-  margin-right: 10px;
-}
-
-.blog-block-up-right {
-  float: left;
-  width: 78%;
-  height: 95%;
-}
-
-.blog-img {
-  width: 20%;
-  height: 15%;
-
-  margin-left: 20px ;
-  margin-top: 5px;
-  margin-right: 10px;
-  padding: 0;
+.list-img img {
+  height: 150px;
+  width: 150px;
 }
 
 .blog-title {
-  width: 70%;
-  height: 15%;
-
-  margin-left: 20px;
-  margin-top: -1%;
+  margin: 0;
 }
 
 .blog-date {
-  width: 70%;
-  height: 15%;
-
-  margin-left: 20px;
-  color: #9eabb3;
+  margin: 0;
   font-size: 14px;
-  font-weight: normal;
-  margin: -2px 0 10px 20px;
+  color: #9eabb3;
 }
 
-.blog-paragraph {
-  width: 95%;
-  height: 40%;
-
-  margin-left: 20px;
-  color: #5d686f;
-  font-size: 18px;
-  font-weight: normal;
-  font-family: courier;
+.continue-reading {
+  display: block;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 1200px) {
@@ -241,10 +215,25 @@ aside {
   .sidebar-manu {
     display: flex;
     flex-direction: column;
-    margin-left: 20px;
+    margin-left: 25px;
   }
 
   .sidebar-manu-right {
     margin-top: -20px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  aside {
+    display: none;
+  }
+
+  .blog-show {
+    margin-left: 30px;
+    overflow: hidden;
+  }
+
+  .list {
+    width: 95%;
   }
 }
